Enhance the contact info with twitter hashtag and placeholder for non-existent phenopackets.org email. Fix irritating horizontal scrolling problem. Rename Idea to Vision. Add attribution (not yet complete) for images and such that are from Wikimedia or elsewhere.

--- a/docs/site/css/landing.css
+++ b/docs/site/css/landing.css
@@ -73,7 +73,7 @@ ul.list-narrow {
 .text-vertical-center h1 {
     margin: 0;
     padding: 0;
-    font-size: 4.0em;
+    font-size: 3.2em;
     font-weight: 700;
 }
 
@@ -216,15 +216,16 @@ hr.small {
 .services {
   width: 100%;
   display: table;
-  padding: 20px 0;
+  padding: 15px 0;
 }
 
 .services > .container {
   padding: 0;
 }
 
-.services > .container .row.row-inset {
-  padding: 0 10px;
+.services > .container > .row {
+  padding: 0;
+  margin: 0;
 }
 
 .service-item {
@@ -326,7 +327,8 @@ hr.small {
 /* Footer */
 
 footer {
-    padding: 100px 0;
+  padding: 0 0 30px 0;
+  border: 1px solid red;
 }
 
 #to-top {
